--- a/Formalys/war/Formalys.html
+++ b/Formalys/war/Formalys.html
@@ -1,15 +1,11 @@
 <!doctype html>
-
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
     <link type="text/css" rel="stylesheet" href="Formalys.css">
 
-    <!--                                           -->
-    <!-- Any title is fine                         -->
-    <!--                                           -->
-    <title>2.1 MVP Starter Project</title>
+    <title>Formalys, suivi des formations Excilys</title>
 
     <script type="text/javascript" language="javascript" src="formalys/formalys.nocache.js"></script>
   </head>
@@ -20,8 +16,7 @@
 
     <noscript>
       <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
-        Your web browser must have JavaScript enabled
-        in order for this application to display correctly.
+        Votre navigateur web doit avoir JavaScript activé pour que cette application fonctionne correctement.
       </div>
     </noscript>
 
